Embed bilibili player and improve video fallback

--- a/细胞里的靖边数字博物馆/modules/models/index.html
+++ b/细胞里的靖边数字博物馆/modules/models/index.html
@@ -28,14 +28,14 @@
                 </h2>
                 <div class="model-detail">
                     <div class="media-right" style="width:100%">
-                        <div class="video-viewer" id="example-video-box">
+                        <div class="video-viewer" id="example-video-box" data-bvid="BV1NjmFBbEzT" data-poster="../../static/images/模型图片/示例.jpg">
                             <button class="video-play-overlay" aria-label="播放视频"><i class="fas fa-play"></i></button>
-                            <video id="example-video" src="https://samplelib.com/lib/preview/mp4/sample-960x540.mp4" poster="../../static/images/模型图片/示例.jpg"></video>
+                            <img class="bili-poster" src="../../static/images/模型图片/示例.jpg" alt="示例封面" />
                         </div>
                         <div class="download-bar" style="margin-top:10px">
-                            <a class="btn-secondary" href="https://samplelib.com/lib/preview/mp4/sample-960x540.mp4" download>
+                            <a class="btn-secondary" href="https://www.bilibili.com/video/BV1NjmFBbEzT/" target="_blank" rel="noopener">
                                 <i class="fas fa-download"></i>
-                                下载视频
+                                在B站打开
                             </a>
                         </div>
                     </div>
@@ -65,14 +65,14 @@
                         </div>
                     </div>
                     <div class="media-right">
-                        <div class="video-viewer" id="star-video-box">
+                        <div class="video-viewer" id="star-video-box" data-bvid="BV1Gi2vBBERk" data-poster="../../static/images/模型图片/“繁星”组_01.jpg">
                             <button class="video-play-overlay" aria-label="播放视频"><i class="fas fa-play"></i></button>
-                            <video id="star-video" src="https://samplelib.com/lib/preview/mp4/sample-960x540.mp4" poster="../../static/images/模型图片/“繁星”组_01.jpg"></video>
+                            <img class="bili-poster" src="../../static/images/模型图片/“繁星”组_01.jpg" alt="繁星组封面" />
                         </div>
                         <div class="download-bar">
-                            <a class="btn-secondary" href="https://samplelib.com/lib/preview/mp4/sample-960x540.mp4" download>
+                            <a class="btn-secondary" href="https://www.bilibili.com/video/BV1Gi2vBBERk/" target="_blank" rel="noopener">
                                 <i class="fas fa-download"></i>
-                                下载视频
+                                在B站打开
                             </a>
                         </div>
                     </div>
@@ -102,14 +102,14 @@
                         </div>
                     </div>
                     <div class="media-right">
-                        <div class="video-viewer" id="haitang-video-box">
+                        <div class="video-viewer" id="haitang-video-box" data-bvid="BV1CqSeBfEof" data-poster="../../static/images/模型图片/“海棠”组_02.jpg">
                             <button class="video-play-overlay" aria-label="播放视频"><i class="fas fa-play"></i></button>
-                            <video id="haitang-video" src="https://samplelib.com/lib/preview/mp4/sample-960x540.mp4" poster="../../static/images/模型图片/“海棠”组_02.jpg"></video>
+                            <img class="bili-poster" src="../../static/images/模型图片/“海棠”组_02.jpg" alt="海棠组封面" />
                         </div>
                         <div class="download-bar">
-                            <a class="btn-secondary" href="https://samplelib.com/lib/preview/mp4/sample-960x540.mp4" download>
+                            <a class="btn-secondary" href="https://www.bilibili.com/video/BV1CqSeBfEof/" target="_blank" rel="noopener">
                                 <i class="fas fa-download"></i>
-                                下载视频
+                                在B站打开
                             </a>
                         </div>
                     </div>
@@ -138,14 +138,14 @@
                         </div>
                     </div>
                     <div class="media-right">
-                        <div class="video-viewer" id="jiban-video-box">
+                        <div class="video-viewer" id="jiban-video-box" data-bvid="BV19j2iBgEKF" data-poster="../../static/images/模型图片/“羁绊”组_03.jpg">
                             <button class="video-play-overlay" aria-label="播放视频"><i class="fas fa-play"></i></button>
-                            <video id="jiban-video" src="https://samplelib.com/lib/preview/mp4/sample-960x540.mp4" poster="../../static/images/模型图片/“羁绊”组_03.jpg"></video>
+                            <img class="bili-poster" src="../../static/images/模型图片/“羁绊”组_03.jpg" alt="羁绊组封面" />
                         </div>
                         <div class="download-bar">
-                            <a class="btn-secondary" href="https://samplelib.com/lib/preview/mp4/sample-960x540.mp4" download>
+                            <a class="btn-secondary" href="https://www.bilibili.com/video/BV19j2iBgEKF/" target="_blank" rel="noopener">
                                 <i class="fas fa-download"></i>
-                                下载视频
+                                在B站打开
                             </a>
                         </div>
                     </div>
@@ -174,14 +174,14 @@
                         </div>
                     </div>
                     <div class="media-right">
-                        <div class="video-viewer" id="lintian-video-box">
+                        <div class="video-viewer" id="lintian-video-box" data-bvid="BV11a2iBFESo" data-poster="../../static/images/模型图片/“临天”组_04.jpg">
                             <button class="video-play-overlay" aria-label="播放视频"><i class="fas fa-play"></i></button>
-                            <video id="lintian-video" src="https://samplelib.com/lib/preview/mp4/sample-960x540.mp4" poster="../../static/images/模型图片/“临天”组_04.jpg"></video>
+                            <img class="bili-poster" src="../../static/images/模型图片/“临天”组_04.jpg" alt="临天组封面" />
                         </div>
                         <div class="download-bar">
-                            <a class="btn-secondary" href="https://samplelib.com/lib/preview/mp4/sample-960x540.mp4" download>
+                            <a class="btn-secondary" href="https://www.bilibili.com/video/BV11a2iBFESo/" target="_blank" rel="noopener">
                                 <i class="fas fa-download"></i>
-                                下载视频
+                                在B站打开
                             </a>
                         </div>
                     </div>
@@ -210,14 +210,14 @@
                         </div>
                     </div>
                     <div class="media-right">
-                        <div class="video-viewer" id="shiguang-video-box">
+                        <div class="video-viewer" id="shiguang-video-box" data-bvid="BV1kZ2vBWEqN" data-poster="../../static/images/模型图片/“拾光”组_05.jpg">
                             <button class="video-play-overlay" aria-label="播放视频"><i class="fas fa-play"></i></button>
-                            <video id="shiguang-video" src="https://samplelib.com/lib/preview/mp4/sample-960x540.mp4" poster="../../static/images/模型图片/“拾光”组_05.jpg"></video>
+                            <img class="bili-poster" src="../../static/images/模型图片/“拾光”组_05.jpg" alt="拾光组封面" />
                         </div>
                         <div class="download-bar">
-                            <a class="btn-secondary" href="https://samplelib.com/lib/preview/mp4/sample-960x540.mp4" download>
+                            <a class="btn-secondary" href="https://www.bilibili.com/video/BV1kZ2vBWEqN/" target="_blank" rel="noopener">
                                 <i class="fas fa-download"></i>
-                                下载视频
+                                在B站打开
                             </a>
                         </div>
                     </div>
@@ -246,14 +246,14 @@
                         </div>
                     </div>
                     <div class="media-right">
-                        <div class="video-viewer" id="weizhen-video-box">
+                        <div class="video-viewer" id="weizhen-video-box" data-bvid="BV1hR2aBZEPD" data-poster="../../static/images/模型图片/“为真”组_06.jpg">
                             <button class="video-play-overlay" aria-label="播放视频"><i class="fas fa-play"></i></button>
-                            <video id="weizhen-video" src="https://samplelib.com/lib/preview/mp4/sample-960x540.mp4" poster="../../static/images/模型图片/“为真”组_06.jpg"></video>
+                            <img class="bili-poster" src="../../static/images/模型图片/“为真”组_06.jpg" alt="为真组封面" />
                         </div>
                         <div class="download-bar">
-                            <a class="btn-secondary" href="https://samplelib.com/lib/preview/mp4/sample-960x540.mp4" download>
+                            <a class="btn-secondary" href="https://www.bilibili.com/video/BV1hR2aBZEPD/" target="_blank" rel="noopener">
                                 <i class="fas fa-download"></i>
-                                下载视频
+                                在B站打开
                             </a>
                         </div>
                     </div>
@@ -283,14 +283,14 @@
                         </div>
                     </div>
                     <div class="media-right">
-                        <div class="video-viewer" id="xinghai-video-box">
+                        <div class="video-viewer" id="xinghai-video-box" data-bvid="BV1HV2YB1Ehe" data-poster="../../static/images/模型图片/“星海”组_07.jpg">
                             <button class="video-play-overlay" aria-label="播放视频"><i class="fas fa-play"></i></button>
-                            <video id="xinghai-video" src="https://samplelib.com/lib/preview/mp4/sample-960x540.mp4" poster="../../static/images/模型图片/“星海”组_07.jpg"></video>
+                            <img class="bili-poster" src="../../static/images/模型图片/“星海”组_07.jpg" alt="星海组封面" />
                         </div>
                         <div class="download-bar">
-                            <a class="btn-secondary" href="https://samplelib.com/lib/preview/mp4/sample-960x540.mp4" download>
+                            <a class="btn-secondary" href="https://www.bilibili.com/video/BV1HV2YB1Ehe/" target="_blank" rel="noopener">
                                 <i class="fas fa-download"></i>
-                                下载视频
+                                在B站打开
                             </a>
                         </div>
                     </div>
@@ -662,6 +662,43 @@
             const examplePlay = () => { exampleVideo.setAttribute('controls','controls'); exampleOverlay.classList.add('hidden'); exampleVideo.play().catch(()=>{}); };
             exampleOverlay.addEventListener('click', examplePlay);
             exampleVideo.addEventListener('click', () => { if (exampleVideo.paused) examplePlay(); });
+
+            // 通用视频初始化与错误回退
+            document.querySelectorAll('.video-viewer').forEach(box => {
+                const vid = box.querySelector('video');
+                const overlay = box.querySelector('.video-play-overlay');
+                if (!vid) return;
+                vid.setAttribute('preload','none');
+                vid.setAttribute('playsinline','');
+                vid.setAttribute('crossorigin','anonymous');
+                // 错误时显示外链打开
+                vid.addEventListener('error', () => {
+                    const err = document.createElement('div');
+                    err.className = 'video-error';
+                    const url = vid.currentSrc || vid.getAttribute('src');
+                    err.innerHTML = `视频加载失败。请 <a href="${url}" target="_blank" rel="noopener">点击此处在新标签打开</a> 或稍后重试。`;
+                    box.parentElement.appendChild(err);
+                    if (overlay) overlay.classList.add('hidden');
+                });
+                // 备用：加载成功后隐藏覆盖层
+                vid.addEventListener('loadeddata', () => { if (overlay) overlay.classList.add('hidden'); vid.setAttribute('controls','controls'); });
+            });
+
+            // B站嵌入：点击覆层后用 iframe 播放
+            document.querySelectorAll('.video-viewer[data-bvid]').forEach(box => {
+                const overlay = box.querySelector('.video-play-overlay');
+                const bvid = box.getAttribute('data-bvid');
+                const poster = box.getAttribute('data-poster');
+                const mountIframe = () => {
+                    const iframe = document.createElement('iframe');
+                    iframe.src = `https://player.bilibili.com/player.html?bvid=${encodeURIComponent(bvid)}&page=1&high_quality=1&danmaku=0`;
+                    iframe.allowFullscreen = true;
+                    iframe.referrerPolicy = 'no-referrer';
+                    box.innerHTML = '';
+                    box.appendChild(iframe);
+                };
+                if (overlay) overlay.addEventListener('click', mountIframe);
+            });
         });
         // 模块特定的JavaScript功能
         let currentRotation = 0;
